Admin TopBar in AdminList covering the whole screen- bug solved.

--- a/components/Admin/List/AdminList/AdminList.module.css
+++ b/components/Admin/List/AdminList/AdminList.module.css
@@ -6,7 +6,7 @@
 
   font-family: "League Spartan", sans-serif;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 100%;
 }
 
 .issuesList {
